@@ -1,5 +1,7 @@
 Release CMTK-1.3.1:
 
+- Libraries: all reconstruction-related classes were consolidated in a new
+    component library, "cmtkRecon"
 - Removed: unused cmtk::DirectionSetOptimizer class.
 - Removed: unused member functions of cmtk::Vector that complicate the API and
     stand in the way of eventually replacing this class with std::valarray.
